--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "export NODE_ENV=development && webpack-dev-server --open",
-		"build": "npm install && export NODE_ENV=production && webpack"
+		"build": "webpack"
 	},
 	"dependencies": {
 		"bip39": "^3.0.2",
