--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "idena-pocket",
 	"private": true,
 	"scripts": {
-		"dev": "export NODE_ENV=development && webpack-dev-server --open",
+		"dev": "export NODE_ENV=development && webpack-dev-server --host 0.0.0.0 --open",
 		"build": "webpack"
 	},
 	"dependencies": {
@@ -28,7 +28,6 @@
 		"@types/react-dom": "^16.9.5",
 		"@types/react-redux": "^7.1.7",
 		"@types/react-router-dom": "^5.1.3",
-		"@types/redux": "^3.6.0",
 		"@types/styled-components": "^5.0.1",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.1.1",
