--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   }
 }
