--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"ethereum-hdwallet": "0.0.26",
 		"history": "^4.10.1",
 		"i18next": "^19.4.4",
+		"i18next-scanner": "^2.11.0",
 		"idena-js": "^1.0.14",
 		"react": "^16.13.1",
 		"react-copy-to-clipboard": "^5.0.2",
