--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "export NODE_ENV=development && webpack-dev-server --host 0.0.0.0 --open",
-		"build": "webpack"
+		"build": "webpack",
+		"i18-scanner": "i18next-scanner src/**/*.{js,jsx,ts,tsx,html}"
 	},
 	"dependencies": {
 		"bip39": "^3.0.2",
@@ -12,11 +13,15 @@
 		"crypto-js": "^4.0.0",
 		"ethereum-hdwallet": "0.0.26",
 		"history": "^4.10.1",
+		"i18next": "^19.4.4",
+		"i18next-browser-languagedetector": "^4.1.1",
+		"i18next-scanner": "^2.11.0",
 		"idena-js": "^1.0.14",
 		"react": "^16.13.1",
 		"react-copy-to-clipboard": "^5.0.2",
 		"react-dom": "^16.13.1",
 		"react-hook-form": "^5.5.3",
+		"react-i18next": "^11.4.0",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
 		"react-tooltip": "^4.2.5",
@@ -42,6 +47,6 @@
 		"webpack": "^4.43.0",
 		"webpack-bundle-analyzer": "^3.7.0",
 		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.10.3"
+		"webpack-dev-server": "^3.11.0"
 	}
 }
