--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
 		"webpack-bundle-analyzer": "^3.7.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-server": "^3.11.0"
-	}
+	},
+	"pre-commit": [
+		"format"
+	]
 }
