--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "export NODE_ENV=development && webpack-dev-server --https --host 0.0.0.0 --open",
-		"build": "webpack",
+		"build": "export NODE_ENV=production && webpack",
 		"i18-scanner": "i18next-scanner src/**/*.{js,jsx,ts,tsx,html}",
 		"format": "prettier-standard --format"
 	},
