--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"webpack": "^4.43.0",
 		"webpack-bundle-analyzer": "^3.7.0",
 		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-dev-server": "^3.11.0",
+		"workbox-webpack-plugin": "^5.1.3"
 	},
 	"pre-commit": [
 		"format"
